--- a/Solution/src_hd/com/acme/solution/Welcome/Welcome.xhtml
+++ b/Solution/src_hd/com/acme/solution/Welcome/Welcome.xhtml
@@ -6,9 +6,8 @@
 	xmlns:p="http://primefaces.org/ui"
 	xmlns:pe="http://primefaces.org/ui/extensions">
 <h:body>
-	<ui:composition template="/layouts/basic.xhtml">
-		<ui:define name="title">Welcome</ui:define>
-		<ui:define name="content">
+	<ui:composition template="/layouts/TaskTemplate.xhtml">
+		<ui:define name="taskForm">
 			<h3>Welcome</h3>
 			
 			<h:form id="form">
